samples/_failures_safe/1761159984_e88926_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c859c166.c: In function ‘main’:
./samples/SAFE/__tmp_c859c166.c:158:29: error: expected ‘)’ at end of input
  158 |         free(compressed.data
      |             ~               ^
      |                             )
./samples/SAFE/__tmp_c859c166.c:158:9: error: expected declaration or statement at end of input
  158 |         free(compressed.data
      |         ^~~~
./samples/SAFE/__tmp_c859c166.c:158:9: error: expected declaration or statement at end of input
